# eos

./: .gitmodules  CMakeLists.txt  README.md
examples/: distance_spheres.json  penumbra.json  scene.json  single_sphere.json  spheres.json
src/: attributes.cpp  attributes.hpp  colour.cpp  colour.hpp  coloured.cpp  coloured.hpp  image.cpp  image.hpp  lamp.cpp  lamp.hpp  main.cpp  main.hpp  material.cpp  material.hpp  pixel.hpp  point_lamp.cpp  point_lamp.hpp  primitive.cpp  primitive.hpp  ray.cpp  ray.hpp  raytracer.cpp  raytracer.hpp  sampling.cpp  sampling.hpp  scene.cpp  scene.hpp  scene_file.cpp  scene_file.hpp  soft_lamp.cpp  soft_lamp.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/raytracer/: main.cpp  main.hpp
src/test/: sphere.cpp  triangle.cpp
